# zotero-upload-url

./: .gitignore  README.md  pyproject.toml  zotero_collection.py  zotero_saver.py
src/zotero_upload_url/: __init__.py  collection.py  saver.py
